--- a/package.json
+++ b/package.json
@@ -6,19 +6,33 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "test": "jest"
   },
   "dependencies": {
+    "@babel/plugin-proposal-private-methods": "^7.16.11",
+    "@babel/plugin-proposal-private-property-in-object": "^7.16.7",
+    "inversify": "^6.0.1",
     "next": "12.1.4",
     "react": "18.0.0",
-    "react-dom": "18.0.0"
+    "react-dom": "18.0.0",
+    "reflect-metadata": "^0.1.13"
   },
   "devDependencies": {
+    "@babel/plugin-proposal-decorators": "^7.17.8",
+    "@testing-library/jest-dom": "^5.16.3",
+    "@testing-library/react": "^13.0.0",
+    "@types/jest": "^27.4.1",
     "@types/node": "17.0.23",
     "@types/react": "17.0.43",
     "@types/react-dom": "17.0.14",
+    "babel-jest": "^27.5.1",
+    "babel-plugin-transform-typescript-metadata": "^0.3.2",
     "eslint": "8.12.0",
     "eslint-config-next": "12.1.4",
+    "identity-obj-proxy": "^3.0.0",
+    "jest": "^27.5.1",
+    "ts-jest": "^27.1.4",
     "typescript": "4.6.3"
   }
 }
